deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasten-io
  labels:
    app: kasten-frs-web-helper
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
