deploy/40-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kasten-frs-web-helper
  namespace: kasten-io
  labels:
    app: kasten-frs-web-helper
spec:
  to:
    kind: Service
    name: kasten-frs-web-helper-svc
    weight: 100
  port: { targetPort: http }
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
